<resources>
    <string name="GOOGLE_MAP_API_KEY">AIzaSyD5JiiPCt_jDHXCDRDyeVcEjDGpu3qnkN4</string>
    <string name="app_name">HelpingTrips</string>
    <string name="create_new_user_guidline">(Connect internet and push the button)</string>
    <string name="cancel">Cancel</string>
    <string name="push_location">Push location</string>
    <string name="push_manually">Push manually</string>
    <string name="push_automatically">Push automatically</string>
    <string name="add_friend">Add friend</string>
    <string name="add">Add Friend</string>
    <string name="list_friend">Your friends</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="follow">Follow</string>
    <string name="delete">Delete</string>
    <string name="made_by_author">Copyright \u00a9 ThanhNV</string>
    <string name="need_push_location">You have not push your location</string>
    <string name="open_gps">Open GPS, please!</string>
    <string name="your_friend_not_push_location">Your friend has not push location!</string>
    <string name="add_friend_success">Add friend successfully.</string>
    <string name="icon">Icon</string>
    <string name="error_duplicate_id">Duplicate friend id!</string>
    <string name="error_id_empty">ID is empty!</string>
    <string name="error_name_empty">Name is empty!</string>
    <string name="friend_id">Friend\'s ID:&#160;</string>
    <string name="update">Update</string>
    <string name="update_successfully">Update user successfully</string>
    <string name="create_new_user">Now, Let\'s START</string>
    <string name="open_network">Connect network, please!!!</string>
    <string name="gps_problem">Your GPS have problem!\n Wait a minute and push again.</string>
    <string name="push_location_success">Push your location successfully.</string>
    <string name="push_location_fail">Fail to push your location into server!!!</string>
    <string name="firebase_server_error">Some thing went wrong on server!!!</string>
    <string name="update_fail">Database manager has some error to update user!!!</string>
    <string name="create_new_user_success">Create new user successfully.</string>
    <string name="direction_error">Direction service has problem, try again!</string>
    <string name="push_again">Push again after 30s to GPS can to action.</string>
    <string name="cant_get_location">Cant get your location!</string>
    <string name="go_map">Go map</string>
    <string name="create_new_user_title">Create new user</string>
    <string name="off_push_auto">OFF push automatically</string>
    <string name="on_push_auto">Push automatically in every 3 minutes</string>
    <string name="error_id_invalid">ID is not exsited!</string>
</resources>
