<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="thanhnv.com.helpingtrips.viewmodel.DialogAddFriendViewModel"/>

        <variable
            name="handler"
            type="thanhnv.com.helpingtrips.view.handler.DialogAddFriendHandler"/>
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_dialog"
        android:paddingTop="@dimen/padding_dialog"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/label_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/margin_left"

            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/add_friend"
            android:textColor="@color/colorHighlighText"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/ll_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@id/label_add_friend"

            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_top"

            android:gravity="center"

            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:hint="@string/id"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
                android:inputType="text"
                android:maxLength="@integer/text_id_length"

                android:nextFocusDown="@id/edt_name"

                android:text="@{viewModel.id}"
                android:addTextChangedListener="@{viewModel.idWatcher}"
                />
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"

                android:hint="@string/name"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
                android:maxLength="@integer/text_name_length"
                android:singleLine="true"

                android:inputType="textCapSentences"

                android:text="@{viewModel.name}"
                android:addTextChangedListener="@{viewModel.nameWatcher}"
                />
        </LinearLayout>

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/discrete_marker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_top"

            app:layout_constraintTop_toBottomOf="@id/ll_add_friend"
            app:adapter="@{viewModel.markerAdapter}"
            app:position="@{viewModel.markerId}"
            />

        <ImageView
            android:id="@+id/img_selected"
            android:layout_width="@dimen/img_selected_size"
            android:layout_height="@dimen/img_selected_size"

            android:layout_marginTop="@dimen/margin_top"

            app:layout_constraintTop_toBottomOf="@id/discrete_marker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_selected"
            />

        <Button
            android:id="@+id/btn_add_friend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"

            android:layout_margin="@dimen/margin_right"

            app:layout_constraintTop_toBottomOf="@id/img_selected"

            android:background="@drawable/bg_button"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="@{handler.onClickAddFriend}"
            />
    </android.support.constraint.ConstraintLayout>
</layout>