<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="thanhnv.com.helpingtrips.viewmodel.MainViewModel"/>

        <variable
            name="handler"
            type="thanhnv.com.helpingtrips.view.handler.MainHandler"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="thanhnv.com.helpingtrips.view.activity.MainActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_push_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_card"
            android:layout_marginLeft="@dimen/margin_card"
            android:layout_marginRight="@dimen/margin_card"

            app:layout_constraintTop_toTopOf="parent"
            android:elevation="4dp"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_your_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/margin_header"
                    android:layout_marginLeft="@dimen/margin_left"

                    android:text="Your Id: "
                    android:textColor="@color/colorNomalText"
                    android:textSize="@dimen/text_size_normal"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/txt_app_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.applicationId}"

                    android:layout_marginTop="@dimen/margin_header"
                    android:layout_marginRight="@dimen/margin_right"

                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/label_your_id"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorHighlighText"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/btn_push_location"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:orientation="horizontal"

                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginLeft="@dimen/margin_left"

                    app:layout_constraintLeft_toRightOf="@id/txt_app_id"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:onClick="@{handler::pushLocation}"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/push_location"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorWhite"
                        />

                    <ImageView
                        android:layout_width="@dimen/image_height"
                        android:layout_height="@dimen/ic_button_height"

                        android:src="@drawable/ic_push_location"

                        android:layout_marginLeft="@dimen/margin_left"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_push_guidline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginBottom="@dimen/margin_top"

                    android:text="@string/push_location_guidline"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorBlack"

                    android:gravity="center"

                    app:layout_constraintTop_toBottomOf="@id/btn_push_location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_card"
            android:layout_marginRight="@dimen/margin_card"
            android:layout_marginLeft="@dimen/margin_card"

            app:layout_constraintTop_toBottomOf="@id/card_push_location"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_add_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingLeft="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"

                    app:layout_constraintTop_toTopOf="parent"

                    android:text="@string/add_friend"
                    android:textColor="@color/colorHighlighText"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/ll_add_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toBottomOf="@id/label_add_friend"

                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginBottom="@dimen/margin_top"

                    android:gravity="center"

                    >
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:hint="@string/id"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:inputType="number"
                        android:maxLength="@integer/text_id_length"
                        android:text="@{viewModel.id}"
                        android:addTextChangedListener="@{viewModel.idWatcher}"

                        android:nextFocusDown="@id/edt_name"
                        android:nextFocusLeft="@id/edt_name"
                        android:nextFocusUp="@id/edt_name"
                        android:nextFocusRight="@id/edt_name"
                        />
                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"

                        android:hint="@string/name"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:maxLength="@integer/text_name_length"
                        android:singleLine="true"
                        android:text="@{viewModel.name}"
                        android:addTextChangedListener="@{viewModel.nameWatcher}"
                        />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height_small"
                        android:layout_weight="1"

                        android:background="@drawable/bg_button"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:onClick="@{handler::onClickAddFriend}"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_friend_guidline"

                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginBottom="@dimen/margin_top"

                    app:layout_constraintTop_toBottomOf="@id/ll_add_friend"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_list_friend"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginLeft="@dimen/margin_card"
            android:layout_marginRight="@dimen/margin_card"
            android:layout_marginTop="@dimen/margin_card"
            android:layout_marginBottom="@dimen/margin_card"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_add_friend"
            app:layout_constraintBottom_toTopOf="@id/author"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_list_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_left"

                    app:layout_constraintTop_toTopOf="parent"

                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"

                    android:text="@string/list_friend"
                    android:textColor="@color/colorHighlighText"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/ll_list_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginTop="@dimen/margin_top"

                    app:layout_constraintTop_toBottomOf="@id/label_list_friend"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/id"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"

                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"

                        android:text="@string/name"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"

                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/follow"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"

                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/delete"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"

                        android:gravity="center"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_divider_height"

                    android:background="@color/colorItemDividerBlack"

                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginLeft="@dimen/margin_left_divider"
                    android:layout_marginRight="@dimen/margin_right_divider"

                    app:layout_constraintTop_toBottomOf="@id/ll_list_title"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginBottom="@dimen/margin_top"

                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:adapter="@{viewModel.adapter}"
                    app:layoutManager="@{viewModel.layoutManager}"

                    android:scrollbars="vertical"
                    >
                </android.support.v7.widget.RecyclerView>


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>



        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/made_by_author"
            android:textColor="@color/colorHighlighText"
            android:textSize="@dimen/text_size_small"

            android:layout_marginBottom="@dimen/margin_bottom_item"
            app:layout_constraintBottom_toBottomOf="parent"

            android:gravity="center"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_floating_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65"

            />

        <thanhnv.com.helpingtrips.view.customview.MovableFloatingActionButton
            android:id="@+id/floating_button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/margin_floating"

            app:backgroundTint="@color/colorButton"
            android:src="@drawable/ic_map"
            app:fabSize="normal"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline_floating_btn"
            android:onClick="@{handler::onClickGoMap}"
            />

    </android.support.constraint.ConstraintLayout>
</layout>

